<resources>
    <string name="app_name">MiArmario</string>

    <!-- ToggleButton -->
    <string name="modo_casual">Casual</string>
    <string name="modo_formal">Formal</string>

    <!-- Switch -->
    <string name="mostrar_accesorios">Accesorios</string>

    <!-- Imagen central del outfit -->
    <string name="desc_outfit">Outfit principal</string>

    <!-- ImageButton Aleatorio -->
    <string name="desc_aleatorio">Aleatorio</string>

    <!-- Botón principal -->
    <string name="btn_cambiar_outfit">Crear Outfit</string>
    <string name="usuario_drippy_com">mario@drippy.com</string>
</resources>
