<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_light">

    <!-- MENÚ SUPERIOR -->
    <ToggleButton
        android:id="@+id/toggleModo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/modo_casual"
        android:textOn="@string/modo_formal"
        android:background="@drawable/toggle_modo_bg"
        android:textColor="@color/toggle_modo_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"/>


    <Switch
        android:id="@+id/switchAccesorios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mostrar_accesorios"
        android:textColor="@color/text_dark"
        android:thumbTint="@color/accent_green"
        android:trackTint="@color/accent_blue"
        app:layout_constraintTop_toTopOf="@id/toggleModo"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <!-- PARTE SUPERIOR -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/viewSuperior"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@id/toggleModo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

        <ImageButton
            android:id="@+id/imgCamiseta"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="Camiseta"
            android:scaleType="fitCenter"
            android:src="@drawable/camisetas"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- PARTE INFERIOR -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/viewInferior"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@id/viewSuperior"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

        <ImageButton
            android:id="@+id/imgPantalon"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="Pantalón"
            android:scaleType="fitCenter"
            android:src="@drawable/pantalon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- ZAPATILLAS -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/viewZapatillas"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/viewInferior"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

        <ImageButton
            android:id="@+id/imgZapatilla"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="Zapatilla"
            android:scaleType="fitCenter"
            android:src="@drawable/zapatillas"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- BOTÓN ALEATORIO -->
    <ImageButton
        android:id="@+id/btnAleatorio"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/btn_aleatorio_circular"
        android:contentDescription="@string/desc_aleatorio"
        android:elevation="12dp"
        android:padding="12dp"
        android:scaleType="centerInside"
        android:src="@drawable/mezcla"
        app:layout_constraintTop_toBottomOf="@id/viewZapatillas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- BOTÓN CAMBIAR OUTFIT -->
    <Button
        android:id="@+id/btnCambiarOutfit"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/btn_cambiar_outfit"
        android:textAllCaps="false"
        android:backgroundTint="@color/accent_red"
        android:textColor="@color/text_light"
        app:layout_constraintTop_toBottomOf="@id/btnAleatorio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
